--- a/src/features/notifications/styles/notifications.css
+++ b/src/features/notifications/styles/notifications.css
@@ -1,5 +1,5 @@
 .notification-container {
-    min-width: var(--size-8);
+    min-width: var(--size-16);
     position: fixed;
     bottom: 1rem;
     right: 1rem;
@@ -17,7 +17,7 @@
     padding: 1rem;
     padding-right: 2.5rem;
     box-shadow: 1px 1px 3px 0 var(--color-primary-1);
-    border-radius: var(--spacing-xs);
+    border-radius: var(--size-1);
     max-width: 540px;
     width: 100%;
 
@@ -32,12 +32,12 @@
         background-color: transparent;
 
         position: absolute;
-        right: 0.5rem;
-        top: 0.5rem;
+        right: var(--size-1);
+        top: var(--size-2);
         cursor: pointer;
 
-        width: 1.25rem;
-        height: 1.25rem;
+        width: var(--size-3);
+        height: var(--size-3);
 
         &::before,
         &::after {
@@ -73,7 +73,7 @@
         button {
             &::after,
             &::before {
-                background-color: var(--color-error-10);
+                background-color: var(--color-error-1);
             }
         }
     }
