--- a/src/layouts/app-navigation/AppNavigation.css
+++ b/src/layouts/app-navigation/AppNavigation.css
@@ -5,10 +5,10 @@ nav {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: var(--spacing-medium);
+    gap: var(--size-3);
 
     background-color: var(--color-neutral-8);
-    padding: var(--spacing-medium);
+    padding: var(--size-3);
 
     a {
         transition: var(--transition);
@@ -18,12 +18,12 @@ nav {
         text-align: center;
         width: 100%;
 
-        padding-top: var(--spacing-small);
-        padding-bottom: var(--spacing-small);
+        padding-top: var(--size-2);
+        padding-bottom: var(--size-2);
         padding-left: 1rem;
-        padding-right: var(--spacing-medium);
+        padding-right: var(--size-3);
 
-        border-radius: var(--spacing-xs);
+        border-radius: var(--size-1);
 
         &:hover:not(.active) {
             background-color: var(--color-neutral-9);
