--- a/src/routes/styles/Profile.css
+++ b/src/routes/styles/Profile.css
@@ -4,7 +4,7 @@
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    column-gap: var(--spacing-medium);
+    column-gap: var(--size-3);
 
     p {
         flex-basis: 100%;
